# PythonDevelopment2024-Sudoku

./: Makefile  README.md  pyproject.toml
clients/: __init__.py
docs/: conf.py  index.rst  modules.rst  sudoku.rst  sudoku_tui.rst  sudoku_tui.view.rst
po/ru_RU.UTF-8/LC_MESSAGES/: sudoku_tui.po
sudoku/: __init__.py  algorithm.py  exception.py  server.py  session.py  types.py
sudoku_tui/: __init__.py  __main__.py  model.py
sudoku_tui/view/: __init__.py  constants.py  view_game.py  view_load_game.py  view_new_game.py  view_start.py  widgets.py
tests/: server_test.py
