[tool.poetry]
name = "PythonDevelopment2024-Sudoku"
version = "0.0.0"
description = ""
authors = [
    #"SegFaulti4 makar.popov01@mail.ru",
    #"Winking-maniac gkgim@yandex.ru",
]
readme = "README.md"
packages = [
    {include = "./sudoku"},
    {include = "./sudoku_tui"}
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
cattrs = "^23.2.3"
numpy = "^1.26.4"
asciimatics = "^1.15.0"
babel = "^2.15.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"

[tool.mypy]
python_version = "3.10"
follow_imports = "normal"
check_untyped_defs = true
allow_redefinition = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "C90", "I", "N", "D"]
ignore = ["D203", "D213", "C901"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
